Reparo em string de conexão com o Banco e Dados

--- a/Padaria_DAL/app.config
+++ b/Padaria_DAL/app.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Padaria_DAL.Properties.Settings.CST" connectionString="Data Source=databasepararia.database.windows.net;Initial Catalog=Padaria;Persist Security Info=False;User ID=Padaria;Password=#Juandias10;MultipleActiveResultSets=False;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False"
+        <add name="Padaria_DAL.Properties.Settings.CST" connectionString="Data Source=wksgbti2;Initial Catalog=Padaria;Integrated Security=SSPI;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
